    This change results in using the config files to find the module name from
    the module file name when the first argument of the use_module/2 directive
    is a compound term (as usual when using library notation).

    Updated the definition of the pseudo-object "user" in order to virtually
    contain the definition of all Prolog built-in predicates.

    Corrected a bug in the Logtalk compiler where a misleading error would be
    reported when a source file contains a clause or a directive that is a
    plain variable.

    Corrected a bug in the Logtalk compiler where a broken term_expansion/2
    definition expanding a term to a variable would succeed instead of
    throwing an error.

    Optimized meta-calls when using closures wrapped in the {}/1 control
    construct. Removed redundant check for debugging mode when executing
    meta-calls.

    Corrected a potential bug in the Logtalk runtime when updating the meta-
    call context for lambda expressions that could result in losing part of
    the context.

    Corrected a bug in the implementation of the predicate_property/2 built-in
    method that allowed access to properties on non-visible predicates. In
    addition, updated this method to also generate meta-predicate templates
    for the call/2-N built-in methods.

    Corrected a bug in the Logtalk built-in debugger that would prevent user
    interaction at the "fact" and "rule" unification ports by always skipping
    to the next port, ignoring leash settings.

    Added support for the predicate renaming operator as/2 found on SWI-Prolog
    and YAP but only when parsing use_module/2 directives in modules that are
    being compiled as objects.

    Updated the SWI-Prolog hooks file, "configs/swihook.pl", in order to avoid
    intercepting Prolog ensure_loaded/1 calls by the prolog_load_file/2 hook
    predicate. This change solves issues when calling Prolog module library