@@ -28,7 +28,7 @@
 Defines an expansion for a term. This predicate, when defined, is automatically called by the <a href="expand_term2.html"><code>expand_term/2</code></a> method. Use of this predicate by the <code>expand_term/2</code> method may be restricted by using a scope directive for it. The <code>term_expansion/2</code> clauses are only used by the <code>expand_term/2</code> method if they are within the scope of the <em>sender</em>. When that is not the case, the <code>expand_term/2</code> method only uses the default expansions. The <code>term_expansion/2</code> predicate may return a list of terms.
 </p>
 <p>
-Term expansion may be used either by calling the <code>expand_term/2</code> method explicitly or by using <em><a class="glossary" title="Go to glossary definition" href="../../glossary.html#hook">hook objects</a></em>. Clauses for the <code>term_expansion/2</code> predicate defined within an object or a category are never in the compilation of the object or the category itself.
+Term expansion may be used either by calling the <code>expand_term/2</code> method explicitly or by using <em><a class="glossary" title="Go to glossary definition" href="../../glossary.html#hook">hook objects</a></em>. Clauses for the <code>term_expansion/2</code> predicate defined within an object or a category are never used in the compilation of the object or the category itself.
 </p>
 
 <h4>Template and modes</h4>
