@@ -46,6 +46,13 @@ RELEASE NOTES
     Updated the definition of the pseudo-object "user" in order to virtually
     contain the definition of all Prolog built-in predicates.
 
+    Updated the definition of the built-in object "logtalk" in order to
+    implement the built-in protocol "expanding".
+
+    Updated the "expanding" built-in protocol in order to declare the
+    predicates goal_expansion/2 and term_expansion/2 as both dynamic and
+    multifile.
+
     Corrected a bug in the Logtalk compiler where a misleading error would be
     reported when a source file contains a clause or a directive that is a
     plain variable.
